--- a/markup/index.html
+++ b/markup/index.html
@@ -16,39 +16,37 @@
 				<img src="./IMAGES/iPhone.webp" alt="iPhone">
 				<p class="infText">Техніка Apple</p>
 				<p class="infText1">Уживана техніка Apple для будь-яких завдань та потреб</p>
-				<a href="#" class="btn">Подробнее</a>
+				<a href="#" class="btn">Більше інформації</a>
 			</div>
 			<div class="infBlock">
 				<img src="./IMAGES/airpods.webp" alt="iPhone">
 				<p class="infText">Airpods</p>
 				<p class="infText1">Навушники Apple AirPods with Charging Case "MV7N2" White</p>
-				<a href="#" class="btn">Подробнее</a>
+				<a href="#" class="btn">Більше інформації</a>
 			</div>
 			<div class="infBlock">
 				<img src="./IMAGES/aplewath.webp" alt="iPhone">
 				<p class="infText">Apple Watch Series 6</p>
 				<p class="infText1">Apple Watch Series 6 GPS, 45mm Aluminum Case with White Sport Band</p>
-				<a href="#" class="btn">Подробнее</a>
+				<a href="#" class="btn">Більше інформації</a>
 			</div>
-		</div>
-		<div class="row">
 			<div class="infBlock">
 				<img src="./IMAGES/imac.webp" alt="iPhone">
 				<p class="infText">IMac</p>
 				<p class="infText1">iMac 27 дюймів. Дисплей Retina 5K. Процесор Intel Core i9 до 10 ядер. Пам’ять до 128 ГБ. Накопи­чувач SSD до 8 ТБ.</p>
-				<a href="#" class="btn">Подробнее</a>
+				<a href="#" class="btn">Більше інформації</a>
 			</div>
 			<div class="infBlock">
 				<img src="./IMAGES/macbook.jpeg" alt="iPhone">
 				<p class="infText">MacBook</p>
 				<p class="infText1">Ноутбук Apple MacBook Pro 13" M1 2TB Space Gray Late 2020 "Z11B000EP"</p>
-				<a href="#" class="btn">Подробнее</a>
+				<a href="#" class="btn">Більше інформації</a>
 			</div>
 			<div class="infBlock">
 				<img src="./IMAGES/applemauze.webp" alt="iPhone">
 				<p class="infText">IMouse</p>
 				<p class="infText1">Миша Apple Magic Mouse A1296 Wireles "MB829ZM / A"</p>
-				<a href="#" class="btn">Подробнее</a>
+				<a href="#" class="btn">Більше інформації</a>
 			</div>
 		</div>
 	</div>
